--- a/BerlinClock/BerlinClock.csproj
+++ b/BerlinClock/BerlinClock.csproj
@@ -40,6 +40,7 @@
     <ItemGroup>
         <Compile Include="BerlinClock.cs" />
         <Compile Include="BerlinClockRules.cs" />
+        <Compile Include="ClockFormatEnum.cs" />
         <Compile Include="IBerlinClockRules.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
