Change rules to return lamp on/off, decouple colour display

--- a/BerlinClock/BerlinClock.csproj
+++ b/BerlinClock/BerlinClock.csproj
@@ -40,7 +40,7 @@
     <ItemGroup>
         <Compile Include="BerlinClock.cs" />
         <Compile Include="BerlinClockRules.cs" />
-        <Compile Include="ClockFormatEnum.cs" />
+        <Compile Include="LampPower.cs" />
         <Compile Include="IBerlinClockRules.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
